add switch between tipes, improve looking, close #58

--- a/EspHubServer/main/templates/main/device_detail.html
+++ b/EspHubServer/main/templates/main/device_detail.html
@@ -82,6 +82,7 @@
                         <div class="input-field">
                             <select id="chart-type-select-{{ value.name }}">
                                 <option value="line" selected>Line</option>
+                                <option value="fill">Fill</option>
                                 <option value="bar">Bar</option>
                             </select>
                             <label for="chart-type-select-{{ value.name }}">Chart type</label>
