--- a/EspHubServer/main/templates/main/forms/screen_settings_form.html
+++ b/EspHubServer/main/templates/main/forms/screen_settings_form.html
@@ -5,7 +5,6 @@
             {{ form.rotation_period.label }} <span id="{{ form.rotation_period.id_for_label }}-value">{{ active_screen.rotation_period }}</span>&nbsp;s
         </label>
         {{ form.rotation_period }}
-        {{ form.id.value }}
     </p>
     <div class="row">
         <div class="input-field col s6 m3 l3">
@@ -34,6 +33,7 @@
         $('#' + range_id + '-value').text($(this).val())
     });
 
+    {# enable save button when content is changed #}
     $('#screen-settings-form').change(function () {
         console.log('form modified');
         $('#btn-save-screen-settings').removeClass('disabled');
