--- a/EspHubServer/main/templates/main/device_detail_control_card.html
+++ b/EspHubServer/main/templates/main/device_detail_control_card.html
@@ -23,8 +23,9 @@
                             </form>
                         {% elif value.category == 'display' %}
                             <!-- Display -->
-                            <a class="waves-effect waves-light btn-flat" href="{% url 'main:display' device_id value.name %}"><i
-                                    class="material-icons md-24 md-light">cast</i></a>
+                            <a class="waves-effect waves-light btn-flat" href="{% url 'main:display_ng' value.id 0 %}">
+                                <i class="material-icons md-24 md-light">cast</i>
+                            </a>
                         {% elif value.category == 'button' %}
                             <a class="waves-effect orange waves-light accent-2 btn" id="action-{{ value.name }}"
                                onmousedown='buttonAjax("{% url 'main:output_action' device_id value.name %}", {{ device_id }}, "{{ value.name }}", "push")'
